--- a/is/whatsnew.lang
+++ b/is/whatsnew.lang
@@ -2,11 +2,11 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Húrra! Firefox er með nýjustu útgáfu.
+Húrra! Firefox er í nýjustu útgáfu.
 
 
 ;Your Firefox is out of date.
-Firefox er með nýjustu útgáfu.
+Firefox er ínýjustu útgáfu.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
@@ -22,11 +22,11 @@ Vegna öryggisástæðna, mælum við með að þú niðurhalir <a href="{url}">
 
 
 ;Get to your next task<br/>faster than ever
-Kláraðu næsta verkefni<br/>enn hraðar
+Kláraðu þín verkefni<br/>hraðar en áður
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-Sjáðu nýjustu hlutina í Firefox sem hjálpa þér að vafra hraðar og skilvirkara.
+Sjáðu hvað er nýtt í Firefox sem hjálpar þér að vafra hraðar og skilvirkara.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
@@ -34,7 +34,7 @@ Fræðast meira um <a href="{url}">nýju flipana »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Fræðast meira um <a href="{url}">endurhönnuðu heimasíðuna okkar »</a>
+Fræðast meira um <a href="{url}">endurbættu heimasíðuna »</a>
 
 
 ;Keep in touch
@@ -42,7 +42,7 @@ Vera í sambandi
 
 
 ;Keep it moving
-Halda áfram ferðinni
+Haltu áfram ferðinni
 
 
 ;Get Firefox » <b>for Android</b>
@@ -50,7 +50,7 @@ Ná í Firefox » <b>fyrir Android</b>
 
 
 ;Keep it going
-Halda áfram
+Haltu áfram
 
 
 ;Join Mozilla
