--- a/tr/whatsnew.lang
+++ b/tr/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Şahane! Firefox'unuz güncel.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Firefox'unuz güncel değil.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Güvenlik nedenleriyle <a href="{url}">en yeni ve en iyi sürüme</a> yükseltmenizi öneririz.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Firefox'un bilinmeyen bir sürümünü kullanıyorsunuz..
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Güvenlik nedenleriyle <a href="{url}">en yeni ve en iyi sürümü</a> indirmenizi öneririz.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Bir sonraki işinizi<br/>her zamankinden daha hızlı bitirin
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Firefox'taki yeni özelliklerin size nasıl hız ve verim kazandıracağını öğrenin.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Yeni Sekme özelliğini <a href="{url}">yakından tanıyın »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Baştan tasarlanan giriş sayfasını <a href="{url}">yakından tanıyın »</a>
 
 
 ;Keep in touch
-Keep in touch
+İrtibatı kesmeyelim
 
 
 ;Keep it moving
-Keep it moving
+Yolda da yanınızda
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Android için » <b>Firefox'u indirin</b>
 
 
 ;Keep it going
-Keep it going
+İrtibatı kesmeyelim
 
 
 ;Join Mozilla
-Join Mozilla
+Mozilla'ya katılın
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android Robotu, Google tarafından üretilen <a href="%s">paylaşılan</a> çalışmanın ürünüdür ve <a href="%s">Creative Commons 3.0 Attribution Lisansı</a> koşullarına uygun olarak kullanılmıştır.
 
 
