--- a/tr/videos/video_fx13.lang
+++ b/tr/videos/video_fx13.lang
@@ -1,42 +1,42 @@
-;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+﻿;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Firefox'ta Neler Yeni?] En yeni Firefox'la istediğiniz yere gitmek artık daha kolay ve daha hızlı.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Baştan tasarlanan giriş sayfasıyla artık en sık kullandığınız menü seçeneklerine kolayca erişebilirsiniz.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+İndirilenler, yer imleri, geçmiş, eklentiler, eşitleme ve ayarlar elinizden altında.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Yeni Sekme Sayfası] Yeni Sekme sayfanızı da geliştirdik.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Yeni Sekme sayfası sayesinde artık en son ve en sık ziyaret ettiğiniz sitelere tek tıklamayla ulaşabilirsiniz.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Yeni Sekme sayfasını kullanmak için, tarayıcınızın tepesindeki '+' düğmesine tıklayarak bir sekme açın.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Yeni Sekme sayfası, Şahane Çubuk geçmişinizden aldığı en son ve en sık ziyaret ettiğiniz sitelerin küçük görüntülerini gösterecektir.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Küçük görüntüleri sürükleyerek sıralamalarını değiştirebilirsiniz.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Siteyi bulunduğu yere kilitlemek için iğneye, siteyi kaldırmak için 'X' düğmesine tıklayın.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Boş yeni sekme sayfasına dönmek için sayfanın sağ üstündeki 'ızgara' simgesine de tıklayabilirsiniz.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+En yeni Firefox'u hemen edinin, bu yeni özellikleri kullanmaya başlayın!
