[l10n: gl] updated the main.lang, whatsnew.lang and videos/video_fx13.lang files for www.mozilla.org
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105799 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/main.lang
+++ b/gl/main.lang
@@ -19,7 +19,7 @@ Doazóns
 
 
 ;Support
-Apoio técnico
+Asistencia técnica
 
 
 ;Products
@@ -115,7 +115,7 @@ Descargue Firefox - De balde
 
 
 ;Release Notes
-Notas de lanzamento
+Notas de publicación
 
 
 ;Other Systems and Languages
