--- a/gl/videos/video_fx13.lang
+++ b/gl/videos/video_fx13.lang
@@ -3,11 +3,11 @@
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-Co novo deseño da páxina de inicio agora pode acceder e navegar facilmente polas opcións que máis use.
+Co novo deseño da Páxina de inicio agora pode acceder e navegar facilmente polas opcións que máis use.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Como as descargas, os marcadores, o historial, os complementos, Sync e a configuración.
+Como as descargas, os marcadores, o historial, os complementos, sincronización e a configuración.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
@@ -19,11 +19,11 @@ Coa páxina Nova lapela, agora pode navegar facilmente polos sitios máis recent
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-Para comezar a usar a páxina Nova lapela, crea unha nova lapela premendo no '+' na parte superior do navegador.
+Para comezar a usar a páxina Nova lapela, pode crear unha nova lapela premendo no '+' na parte superior do navegador.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-A páxina Nova lapela amosará as miniaturas dos sitios web máis recentes e máis visitados do historial da barra incríbel.
+A páxina Nova lapela amosará as miniaturas dos sitios web máis recentes e máis visitados de entre os da Barra Incríbel do historial.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
@@ -35,8 +35,8 @@ Prema na chincheta para bloquear un sitio nun lugar ou no botón 'X' para retira
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-Tamén pode premer na icona 'grade' na parte superior dereita da páxina para regresar a páxina Nova lapela a branco. 
+Tamén pode premer na icona 'grade' na parte superior dereita da páxina para deixar en branco a páxina Nova lapela. 
 
 
 ;Get the latest Firefox now and start using these new features today!
-Obteña a última versión do Firefox e comece a usar estas novas características xa!
+Consiga xa a última versión do Firefox e comece a usar estas novas características!
