--- a/gl/whatsnew.lang
+++ b/gl/whatsnew.lang
@@ -34,7 +34,7 @@ Descubra o botón <a href="{url}">Nova lapela »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Descubra a nova <a href="{url}">páxina de inicio »</a>
+Descubra a nova <a href="{url}">Páxina de inicio »</a>
 
 
 ;Keep in touch
