--- a/ru/whatsnew.lang
+++ b/ru/whatsnew.lang
@@ -54,7 +54,7 @@
 
 
 ;Join Mozilla
-Присоединиться к Mozilla
+Вступить<br/>в Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
