Bug 760520 - [lt] Translate Whats New page for Firefox 13 + video
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105801 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lt/videos/video_fx13.lang
+++ b/lt/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Kas naujo „Firefox“?] Su naująja „Firefox“ laida dar paprasčiau ir greičiau pateksite ten, kur norite.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Perdaryto pradžios tinklalapio dėka lengviau pasieksite ir pasinaudosite dažniausiai naudojamais meniu elementais.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Štai jie: atsiuntimai, adresynas, žurnalas, priedai, sinchronizavimas ir nuostatos.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Naujos kortelės tinlalapis] Be to, mes patobulinome naujos kortelės tinklalapį.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Naujos kortelės tinklalapio dėka į paskiausiai ir dažniausiai naršytas svetaines galėsite patekti vos vienu pelės spragtelėjimu.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Į naujos kortelės tinklalapį pateksite, sukūrę naują kortelę, t.y., spragtelėję pliuso ženklą naršyklės viršuje.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Naujos kortelės tinklalapyje rodomos paskiausiai ir dažniausiai Jūsų naršytų svetainių miniatiūros.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Naujos kortelės tinklalapį galite pritaikyti prie savo poreikių. Pernešdami miniatiūras, galite keisti jų tvarką.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Spustelėję smeigtuką, įtvirtinsite svetainę nurodytoje pozicijoje. Spustelėję kryžiuką, pašalinsite ją iš sąrašo.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Spustelėję tinklelio piktogramą, esančią tinklalapio viršutiniame dešiniajame kampe, galite grįžti į tuščią naujos kortelės tinklalapį.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Parsisiųskite šviežiausią „Firefox“ ir pradėkite naudotis šiomis naujovėmis jau dabar!
