--- a/lt/whatsnew.lang
+++ b/lt/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Valio! Jūsų „Firefox“ atšviežinta.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Jūsų „Firefox“ pasenusi.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Saugumo sumetimais patariame ją atšviežinti, parsisiunčiant <a href="{url}">paskiausią ir geriausią laidą</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Jūs naudojatės nežinoma „Firefox“ laida.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Saugumo sumetimais patariame parsisiųsti <a href="{url}">paskiausią ir geriausią laidą</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Prie kitos užduoties<br/>pereikite greičiau
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Susipažinkite su „Firefox“ naujovėmis, padėsiančiomis naršyti sparčiau ir efektyviau.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Sužinokite daugiau apie <a href="{url}">naujas korteles »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Sužinokite daugiau apie <a href="{url}">atnaujintą pradžios tinklalapį »</a>
 
 
 ;Keep in touch
-Keep in touch
+Palaikykime ryšį
 
 
 ;Keep it moving
-Keep it moving
+Turėkite naršyklę su savimi
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Parsisiųskite „Firefox“ » <b>Android'ui</b>
 
 
 ;Keep it going
-Keep it going
+Būkime kartu
 
 
 ;Join Mozilla
-Join Mozilla
+Įsitraukite į „Mozillą“
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+„Android“ robotas atkurtas iš medžiagos, <a href="%s">kuria pasidalino „Google“</a> ir naudojamas <a href="%s">„Creative Commons 3.0 Attribution“ licencijos</a> sąlygomis.
 
 
