[l10n-br] New strings for newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105803 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/br/newsletter.lang
+++ b/br/newsletter.lang
@@ -178,18 +178,18 @@ Trugarez deoc'h da vezañ lavaret deomp perak ez it kuit.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Lizhiri kelaouiñ eus Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Trugarez ! Mar plij, gwirit ho poest degemer evit kadarnaat ho koumanantiñ.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Ur postel a berzh mozilla@e.mozilla.org a zegemerot evit kadarnaat ho koumanantiñ. Ma ne welit ket anezhañ, gwirit ho siloù spam. Ret eo deoc'h kadarnaat ho koumanantiñ evit degemer hol lizher kelaouiñ.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Mar plij, ouzhpennit hor chomlec'h kas : mozilla@e.mozilla.org d'ho karned chomlec'hioù evit bezañ sur e c'hellimp tizhout ho poest degemer.
 
 
