Bug 760539 - [sk] Translate Whats New page for Firefox 13
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105810 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sk/snippets.lang
+++ b/sk/snippets.lang
@@ -126,6 +126,6 @@ Rýchly, rýchly, rýchly. <a %s>Firefox pre Android bol výrazne vylepšený</a
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox obsahuje nové funkcie, pomocou ktorých sa dostanete k vašej nasledujúcej úlohe ešte rýchlejšie! <a href="%">Ďalšie informácie v našom videu</a>.
 
 
