--- a/sk/whatsnew.lang
+++ b/sk/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hurá! Váš Firefox je aktuálny.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Váš Firefox nie je aktuálny.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Z bezpečnostných dôvodov odporúčame prejsť na <a href="{url}">najnovšiu a najlepšiu verziu</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Používate nerozpoznanú verziu prehliadača Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Z bezpečnostných dôvodov odporúčame nainštalovať <a href="{url}">najnovšiu a najlepšiu verziu</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+K svojej ďalšej úlohe<br/>sa dostanete ešte rýchlejšie
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Pozrite sa, ako vám nové funkcie Firefoxu môžu pracovať s webom rýchlejšie a efektívnejšie.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Ďalšie informácie o funkcii <a href="{url}">Nová karta »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Ďalšie informácie o <a href="{url}">novej domovskej stránke »</a>
 
 
 ;Keep in touch
-Keep in touch
+Zostaňte v spojení
 
 
 ;Keep it moving
-Keep it moving
+Presuňte sa na cesty
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Získať Firefox » <b>pre Android</b>
 
 
 ;Keep it going
-Keep it going
+Zostaňte s nami
 
 
 ;Join Mozilla
-Join Mozilla
+Pripojiť sa k Mozille
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Logo Android Robot bolo reprodukované z materiálu vytvoreného a <a href="%s">zdieľaného spoločnosťou Google</a> a bolo použité za podmienok popísaných v licencii <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
