some updates for Frisian
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105813 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fy-NL/download.lang
+++ b/fy-NL/download.lang
@@ -35,6 +35,6 @@ Wolkom by de ienige browser <em>dy't jo op it earste plak set.</em>
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Mozilla Firefox Ynternetbrowser
 
 
