--- a/fy-NL/main.lang
+++ b/fy-NL/main.lang
@@ -27,7 +27,7 @@ Produkten
 
 
 ;Add-ons
-Tafoegings
+Add-ons {ok}
 
 
 ;About Us
@@ -39,7 +39,7 @@ Untwikkelers
 
 
 ;Labs
-Labs
+Labs {ok}
 
 
 ;skip to Navigation
@@ -95,7 +95,7 @@ Alle rjochten foarbehâlden
 
 
 ;Legal Notices
-Juridyske Meidielingen
+Juridyske meidielingen
 
 
 ;Privacy Policy
@@ -115,7 +115,7 @@ Laad Firefox yn - Fergees
 
 
 ;Release Notes
-Utjefteopmerkings
+Utjefteopmerkingen
 
 
 ;Other Systems and Languages
@@ -135,7 +135,7 @@ Help ús om Firefox better te meitsjen!
 
 
 ;Take a few moments to take a quick survey and share your thoughts with us.
-Nim wat tiid om in koarte fragelist yn te foljen, om jo gedachten mei ús te dielen.
+Nim wat tiid om in koarte fragelist yn te foljen, om jo tinzen mei ús te dielen.
 
 
 ;Close
@@ -155,7 +155,7 @@ Nei boppe
 
 
 ;You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
-Jo soene daliks jo <a href="http://get.adobe.com/flashplayer/">Adobe Flash Player fernije</a>.
+Jo soene better daliks jo <a href="http://get.adobe.com/flashplayer/">Adobe Flash Player fernije</a>.
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
@@ -183,7 +183,7 @@ Oare stipe platfoarms
 
 
 ;Other Platforms &amp; Languages
-Oare Platfoarms &amp; Talen
+Oare Platfoarmen &amp; Talen
 
 
 ;Choose your location
@@ -203,15 +203,15 @@ Folgjende
 
 
 ;MB
-MB
+MB {ok}
 
 
 ;MegaBytes
-MegaBytes
+MegaBytes {ok}
 
 
 ;FAQ
-FAQ
+FAQ {ok}
 
 
 ;Videos
@@ -219,7 +219,7 @@ Fideos
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-Utsein wêr oars <a href="%s">melden</a>, ynhâld op dizze side is lisinsearre ûnder de <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> of elke lettere ferzje.
+Utsein wêr oars <a href="%s">melden</a>, ynhâld op dizze side is lisinsearre ûnder de <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> of eltse lettere ferzje.
 
 
 ;Report Trademark Abuse
@@ -235,7 +235,7 @@ Folgje ús op:
 
 
 ;Customize with Add-ons
-Pas oan mei tafoegings
+Pas oan mei Add-ons
 
 
 ;Sync Your Desktop & Mobile
@@ -267,7 +267,7 @@ Oops! Wês wis dat jo in falide e-mailadres ynfolje.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Lês asjobleaft it Mozilla Privacybelied en gean akkoard troch it fek oan te finken.
+Lês it Mozilla Privacybelied en gean akkoard troch it fekje oan te finken.
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
@@ -295,7 +295,7 @@ Doch mei mei it bètaprogramma
 
 
 ;Experience Firefox
-Erfaar Firefox
+Untdek Firefox
 
 
 ;The future of the Web is waiting for you!
@@ -311,7 +311,7 @@ Probearje Firefox mei in fernijde foarmjouwing.
 
 
 ;Experience tomorrow's Web today.
-Erfaar hjoed it ynternet fan moarn.
+Untdek hjoed it ynternet fan moarn.
 
 
 ;Check out the new look and feel of Firefox.
