--- a/fy-NL/newsletter.lang
+++ b/fy-NL/newsletter.lang
@@ -66,7 +66,7 @@ Your newsletter subscription has been confirmed.
 
 
 ;Format
-Format
+Formaat
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
@@ -78,7 +78,7 @@ Want to get the most relevant info? Tell us a little more about yourself. And wh
 
 
 ;Firefox & You
-Firefox & You
+Firefox & Jo
 
 
 ;Our Other Newsletters:
@@ -90,7 +90,7 @@ Get the latest tips and tricks for getting the most out of your favorite browser
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobyl
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
@@ -98,7 +98,7 @@ Learn about the hottest new add-ons and features for Firefox mobile.
 
 
 ;Beta News
-Beta News
+Betanijs
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
@@ -118,11 +118,11 @@ Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
-Subscribe
+Oanmelde
 
 
 ;Unsubscribe
-Unsubscribe
+Ofmelde
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
