--- a/fy-NL/whatsnew.lang
+++ b/fy-NL/whatsnew.lang
@@ -2,11 +2,11 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hoera! Jo Firefox is by de tiid.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Jo Firefox is út 'e tiid.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
