--- a/fy-NL/mobile.lang
+++ b/fy-NL/mobile.lang
@@ -2,130 +2,130 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Krij Firefox foar Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Download foar <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Fergees fan de Android Market
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+Of besykje <a %s>Firefox.com/m</a> op jo mobyl.
 
 
 ;Supported Devices
-Supported Devices
+Stipe apparaten
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Krij it fan iTunes - FERGEES
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+Firefox Home foar <span>iPhone</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Krij jo Firefox skiednis, blêdwizers en iepen ljepblêden op jo iPhone.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Download Firefox nei <span>Jo Mobyl</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+Wolle jo de lêste funksjes teste?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Krij Firefox Home foar iPhone
 
 
 ;Download Beta for Android
-Download Beta for Android
+Download Bèta foar Android
 
 
 ;Download
-Download
+Download {ok}
 
 
 ;for
-for
+foar
 
 
 ;Free from iTunes
-Free from iTunes
+Fergees fan iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+Jo krije de mooglikheid om de bjusterbaarlikste funksjes te ûntdekken en kommentaar te jaan om te helpen mei ferbetterjen en polysten wat yn de nijste útjefte komt.
 
 
 ;Developer Tools
-Developer Tools
+Untwikkelersark
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+Jo kinnne de mobile ferzje fan Firefox ynstallearje op jo desktop om to testen, kommentaar te jaan en add-ons te meitsjen.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Ferbyn mei Firefox foar Mobyl:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Moanlikse nijsbrief
 
 
 ;Follow us
-Follow us
+Folgje ús
 
 
 ;Become a fan
-Become a fan
+Wurd in fan
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+Firefox is fol mei ynnovaassjes dy't jo minder type lit, mear sneupe en fluch maklik op it ynternet lit.
 
 
 ;Freedom from typing
-Freedom from typing
+Frijheid mei typjen
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+It startskerm leart jo favorite siden sadat jo blêdzje kinne troch in bytsje oant neat te typjen.
 
 
 ;Best of both worlds
-Best of both worlds
+Bêste fan beide wrâlden
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+Firefox foar Android is no opnij ûntwerpe en optimalisearre foar de manier hoe't jo sneupe op telefoans en tablets.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Sneup fluch en maklik
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Funksjes lykas Sync, sneupe mei ljepblêden en ien-tik blêdwizerje betsjut dat alles wat jo wolle tichtby is.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Help nedich?</a> Besykje ús Firefox foar Android Stipesite.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Download en test de build dy't krekt foar jo is.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Besjoch al ús kanalen foar mobyl »
 
 
