--- a/zh-CN/videos/video_fx13.lang
+++ b/zh-CN/videos/video_fx13.lang
@@ -1,5 +1,5 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Firefox 新功能] 通过最新版本的 Firefox ，你可以更容易更快地做到你希望的事情。
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
@@ -7,36 +7,36 @@ With the redesigned Home page you can now easily access and navigate to your mos
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+例如下载，数千，历史，附加组件，同步和设置。
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[新标签页页面] 我们还对新标签页页面进行了改进。
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+通过新标签页页面，你现在只需单击即可访问你最近和经常访问的网站。
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+要开始使用新标签页页面，点击浏览器顶部的“+”创建一个新标签页。
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+现在新标签页页面将会根据智能地址栏历史，显示你最近和经常访问的网站的缩略图。
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+你可以通过拖拽缩略图改变顺序，来自定义你的新标签页页面。
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+点击图钉按钮将网站锁定在位置上，或者点击“X”按钮移除网站。
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+你还可以点击页面右上角的“网格”图标回到空白的新标签页页面。
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+现在就获取最新版本 Firefox 并开始使用这些新功能。
