--- a/zh-CN/whatsnew.lang
+++ b/zh-CN/whatsnew.lang
@@ -2,62 +2,61 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+太好了！你的 Firefox 是最新版本。
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+你的 Firefox 版本已经过时了。
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+基于安全原因，我们建议升级到 <a href="{url}">最新最好的版本</a>。
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+你正在运行一个未知版本的 Firefox 。
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+基于安全原因，我们建议下载 <a href="{url}">最新最好的版本</a>。
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+让你的下一个任务<br/>比以往任何时候都快
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+看看 Firefox 的新功能怎样帮助你更快更高效地浏览网络。
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+深入了解 <a href="{url}">新标签页功能 »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+深入了解我们 <a href="{url}">重新设计的首页 »</a>
 
 
 ;Keep in touch
-Keep in touch
+保持联络
 
 
 ;Keep it moving
-Keep it moving
+不断变化
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+下载 Firefox » <b>Android 版</b>
 
 
 ;Keep it going
-Keep it going
+坚持到底
 
 
 ;Join Mozilla
-Join Mozilla
+加入 Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
+Android 机器人由 <a href="%s">Google 创作并分享</a>，依据 <a href="%s">Creative Commons 3.0 Attribution License</a> 中描述的条款使用。
 
