whatsnew firefox 13, bug 760549
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105840 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/uk/videos/video_fx13.lang
+++ b/uk/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Що нового в Firefox] Тепер дістатись до потрібного сайта можна швидше та легше.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+З оновленою домашньою сторінкою ви можете легко дібратись до важливих розділів меню.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Таких як завантаження, закладки, історія, додатки, синхронізація та налаштування.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[сторінка Нової Вкладки] Ми також покращили сторінку Нової Вкладки.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Завдяки Новій Вкладці, ви можете швидко перейти до недавніх та часто відвідуваних сайтів.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Щоб почати використовувати сторінку Нової Владки створіть нову вкладку клацнувши по '+' вгорі вашого браузера.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Сторінка Нової Вкладки покаже мініатюри недавніх та часто відвідуваних сайтів з історії Вражаючої Панелі.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Ви можете налаштувати вашу сторінку Нової Вкладки впорядкувавши мініатюри перетягуванням.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Клацніть на булавці щоб прикріпити сайт до місця, чи кнопку 'X' щоб його вилучити.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Ви також можете клацнути по іконці 'сітка' у правому верхньому куті сторінки щоб повернутись до порожньої нової Вкладки.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Завантажте найновіший Firefox і почніть використовувати ці новинки сьогодні!
