--- a/uk/whatsnew.lang
+++ b/uk/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Ура! Маєте останню версію Firefox.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Ваш Firefox застарів.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+З міркувань безпеки, ми радимо вам оновитись до <a href="{url}">останньої та найкращої версії</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Ви користуєтесь невідомою версією Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+З міркувань безпеки, ми радимо вам завантажити <a href="{url}">останню та найкращу версію</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Перехід від задачі до задачі<br/>став швидше ніж будь-коли
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Подивіться, як нові можливості Firefox зроблять вашу роботу швидшою та ефективнішою.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Дізнайтесь про <a href="{url}">можливості Нової Вкладки »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Дізнайтесь про <a href="{url}">оновлену домашню сторінку »</a>
 
 
 ;Keep in touch
-Keep in touch
+Лишайтесь на зв’язку
 
 
 ;Keep it moving
-Keep it moving
+Будьте мобільним
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Завантажити Firefox » <b>під Android</b>
 
 
 ;Keep it going
-Keep it going
+Слідкуйте за новинами
 
 
 ;Join Mozilla
-Join Mozilla
+Приєднатись до Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Робота Android було відтворено з роботи, створеної та <a href="%s">наданої компанією Google</a>, і використано згідно до умов викладених у ліцензії <a href="%s">Creative Commons 3.0 Attribution</a>.
 
 
