--- a/uk/firefoxtesting.lang
+++ b/uk/firefoxtesting.lang
@@ -2,58 +2,57 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+Завантажте Бету Firefox під Android - Безплатно
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+Завантажте Бету Firefox для Десктопів - Безплатно
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+Завантажте та тестуйте майбутні випуски Firefox. Спробуйте останні новинки у збірках Аврора та Бета.
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Бета
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+Firefox Бета для:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Firefox Бета для мобільних
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+Завантажте Бету та долучіться до розробки наступної версії Firefox.
 
 
 ;1. Test Features
-1. Test Features
+1. Потестуйте новинки
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
-
+Спробуйте останні покращення швидкодії, гнучкості та безпеки — майже готові до виходу в люди.
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. Поліпшіть Firefox
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+Засилайте вади, щоб допомогти нам внести останні правки стосовно швидкодії та функціоналу стабільної версії.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. Робіть своє
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+Майте вплив на наступну версію Firefox та на те, яким його побачать 450 мільйонів користувачів.
 
 
 ;Supported devices
-Supported devices
+Підтримувані пристрої
 
 
