--- a/uk/whatsnew.lang
+++ b/uk/whatsnew.lang
@@ -22,7 +22,7 @@
 
 
 ;Get to your next task<br/>faster than ever
-Перехід від задачі до задачі<br/>став швидше ніж будь-коли
+Перехід від задачі до задачі<br/>став швидшим ніж будь-коли
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
