--- a/tr/whatsnew.lang
+++ b/tr/whatsnew.lang
@@ -22,7 +22,7 @@ Güvenlik nedenleriyle <a href="{url}">en yeni ve en iyi sürümü</a> indirmeni
 
 
 ;Get to your next task<br/>faster than ever
-Bir sonraki işinizi<br/>her zamankinden daha hızlı bitirin
+Bir sonraki işinizi<br/>eskisinden daha hızlı bitirin
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
@@ -34,7 +34,7 @@ Yeni Sekme özelliğini <a href="{url}">yakından tanıyın »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Baştan tasarlanan giriş sayfasını <a href="{url}">yakından tanıyın »</a>
+Yenilenen giriş sayfasını <a href="{url}">yakından tanıyın »</a>
 
 
 ;Keep in touch
